crates/hir/tests/snapshots/docs__file_docs_comment_run_ends_at_declaration.snap
---
source: crates/hir/tests/docs.rs
expression: "render_docs(&db, file_id())"
---
C Class → <none>
a Field → "/// one\n    /// two"
b Field → "/// three\n    /// four"
