crates/hir/tests/snapshots/docs__kdoc_of_a_kotlin_script_declaration.snap
---
source: crates/hir/tests/docs.rs
expression: "docs.join(\"\\n\")"
---
greeting → "/**\n * The greeting of the script.\n */"
Greeter → <none>
Greeter → <none>
Greeter.name → <none>
Greeter.greet → "/** The greeting of a name. */"
